Correctly display line breaks in to-do details

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,6 +87,7 @@ input[type=checkbox] {
   padding-top: 5px;
   padding-bottom: 10px;
   overflow: auto;
+  white-space: pre-wrap;
 }
 
 .expand-button {
